hphp/hack/test/typecheck/reactive/immutable_value_mutable_method1.php.exp
File "immutable_value_mutable_method1.php", line 12, characters 3-7:
Cannot call mutable function on immutable expression (Typing[4214])
File "immutable_value_mutable_method1.php", line 5, characters 19-19:
This function is marked <<__Mutable>>, so it has a mutable $this.
